Fix tooltips z-index

--- a/src/general/tooltip.scss
+++ b/src/general/tooltip.scss
@@ -1,11 +1,13 @@
 /* TOOLTIP */
+%tooltipContainer {
+	z-index: 3002;
+}
 %tooltip {
 	padding: 5px 10px;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
 	border-radius: 3px;
 	font-size: 13px;
 	font-weight: 600;
-	z-index: 3002;
 	%tooltipContainer & {
 		color: #fff;
 	}
